# kaji-buntan

./: .env.example  Cargo.toml  README.md  api_sequence_uml.pu  api_uml.pu  docker-compose.yml  firebase.js  package-lock.json  package.json  tableStructure.pu
api/: .env.example  composer.json  housework_sharing_openapi.json
api/config/: logging.php  openapi.php
api/docker/: Dockerfile
api/routes/: api.php
app/: .eslintrc.json  .gitignore  Cargo.toml  README.md  next.config.js  package-lock.json  package.json
app/components/: GdprText.jsx  InputBox.jsx  allocationChip.jsx  allocationList.jsx  errorDialog.jsx  explainQForm.jsx  guideTalk.jsx  header.jsx  introImageStepper.jsx  landingPage.jsx  makePieChart.jsx  newInputItem.jsx  resultDashboard.jsx  resultTabComponent.jsx
app/docker/: Dockerfile
app/lib/: atoms.js  getInitialTaskRepartition.js  sendDataToDB.js  setDataToDB.js  validateCount.js
app/wasm_rust_project/: Cargo.toml  README.md
app/wasm_rust_project/src/: lib.rs
components/: InputBox.jsx  allocationChip.jsx  allocationList.jsx  dataCollect.jsx  explainQForm.jsx  explainQFrom.jsx  guideTalk.jsx  header.jsx  inputItem.jsx  landingPage.jsx  makeAllocationPieChart.jsx  makeBarGraph.jsx  makePieChart.jsx  newInputItem.jsx  resultDashboard.jsx  resultTabComponent.jsx  taskCategoryList.jsx  taskListItem.jsx
lib/: atoms.js  getInitialTaskRepartition.js
nginx/: nginx.conf
pages/: _app.js  index.js  input.js  input.jsx  result.jsx
src/: calculateBurden.js  constants3.js  detectAllocationChange.js  mainAlgorithm.js
styles/: input.module.css
(+51 files in other folders)
